--- a/src/components/ServiceList/ServiceList.module.css
+++ b/src/components/ServiceList/ServiceList.module.css
@@ -1,7 +1,7 @@
 .list {
   padding: 0;
   margin: 0;
-  list-style-type: none; /* Убираем маркеры у списка */
+  list-style-type: none; 
 }
 
 .item {
@@ -57,7 +57,7 @@
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease;
-  position: relative; /* Для эффекта при наведении */
+  position: relative; 
 }
 
 .button::after {
@@ -66,13 +66,13 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.1); /* Легкий эффект затемнения */
+  background-color: rgba(0, 0, 0, 0.1); 
   opacity: 0;
   transition: opacity 0.3s ease;
 }
 
 .button:hover::after {
-  opacity: 1; /* Появление эффекта при наведении */
+  opacity: 1; 
 }
 
 .editButton {
